# telemacher

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  cli.yaml  cli.yml  trained-assistant.json
src/: chat.rs  cli.rs  dark_sky.rs  google.rs  google_maps.rs  harris.rs  main.rs  web.rs
