[package]
name = "telemacher"
version = "0.1.0"
authors = ["john wells <john@attackgoat.com>"]

[dependencies]

# Command line argument parser
# https://github.com/kbknapp/clap-rs
clap = { version = "2.31", features = ["yaml"] }

# HTTP client/server plus dependencies
# https://github.com/actix/actix-web
actix = "0.5.6"
actix-web = "0.5.4"
futures = "0.1"

# JSON https://github.com/maciejhirsz/json-rust
json = "0.11.13"

# NLU https://github.com/snipsco/snips-nlu-rs
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
