[package]
name = "telemacher"
version = "0.1.0"
authors = ["john wells <john@attackgoat.com>"]

[dependencies]
num_cpus = "1.0"

# CLI parser https://github.com/kbknapp/clap-rs
clap = { version = "2.31", features = ["yaml"] }

# HTTP server
futures = "0.1.11"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp", branch = "master" }
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

# Multipart parser https://github.com/abonander/multipart
multipart = { version = "0.14.2", features = ["server"] }

# JSON https://github.com/maciejhirsz/json-rust
json = "0.11.13"

# NLU
snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" }
